src/types/tests/snapshots/tgbot__types__tests__message__channel_chat.snap
---
source: src/types/tests/message.rs
expression: expected_struct
---
{
  "chat": {
    "type": "channel",
    "id": 1,
    "title": "Channel"
  },
  "date": 0,
  "has_protected_content": false,
  "message_id": 1,
  "is_automatic_forward": false,
  "author_signature": "test"
}
