src/types/tests/snapshots/tgbot__types__tests__message__chat_background_set.snap
---
source: src/types/tests/message.rs
expression: expected_struct
---
{
  "chat": {
    "type": "supergroup",
    "id": 1,
    "title": "Chat"
  },
  "date": 1,
  "has_protected_content": false,
  "message_id": 1,
  "is_automatic_forward": false,
  "from": {
    "first_name": "User",
    "id": 1,
    "is_bot": false
  },
  "chat_background_set": {
    "type": {
      "type": "wallpaper",
      "dark_theme_dimming": 100,
      "document": {
        "file_id": "file-id",
        "file_unique_id": "file-unique-id"
      },
      "is_blurred": true,
      "is_moving": false
    }
  }
}
