src/types/tests/snapshots/tgbot__types__tests__message__chat_shared-2.snap
---
source: src/types/tests/message.rs
expression: expected_struct
---
{
  "chat": {
    "type": "supergroup",
    "id": 1,
    "title": "Chat"
  },
  "date": 1,
  "has_protected_content": false,
  "message_id": 1,
  "is_automatic_forward": false,
  "from": {
    "first_name": "User",
    "id": 1,
    "is_bot": false
  },
  "chat_shared": {
    "chat_id": 1,
    "request_id": 1,
    "photo": [
      {
        "file_id": "file-id",
        "file_unique_id": "file-unique-id",
        "height": 100,
        "width": 100
      }
    ],
    "title": "title",
    "username": "username"
  }
}
